--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -1,18 +1,8 @@
 # Authors
 
 Name Name:
-  name        : "Name Name"
-  uri         : "https://name.com"
-  email       : "name@name.com"
-  bio         : "This is the first name."
+  name        : "Gian Marco Osso"
+  uri         : "https://gianmarcoosso.github.io"
+  email       : "gian.marco.osso1@gmail.com"
+  bio         : "Mathematician interested in problems related to computability theory, descriptive set theory and foundations"
   avatar      : "bio-photo-2.jpg"
-  twitter     : "name"
-  google_plus : "Name"
-
-Name2 Name2:
-  name        : "Name2 Name2"
-  email       : "name2@name2.com"
-  bio         : "I ordered what?"
-  avatar      : "bio-photo.jpg"
-  twitter     : "name2"
-  google_plus : "Name"
